latihan-19mar/landingpage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landingpage
spec:
  replicas: 5
  selector:
    matchLabels:
      app: landingpage
  template:
    metadata:
      labels:
        app: landingpage
    spec:
      containers:
      - name: landingpage
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: landingpage
spec:
  selector:
    app: landingpage
  type: LoadBalancer
  ports: 
  - port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: landingpage-clusterip
spec:
  selector:
    app: landingpage
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: landingpage-nodeport
spec:
  selector:
    app: landingpage
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
