latihan-19mar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: cilsy14
  labels:
    name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: ari.kubernetes.retiarno.my.id
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: nginx-ari
            port: 
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ari
  namespace: cilsy14
spec:
  selector:
    matchLabels:
      app: nginx-ari
  template:
    metadata:
      labels:
        app: nginx-ari
    spec:
      containers:
      - name: nginx-ari
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-ari
  namespace: cilsy14
spec:
  selector:
    app: nginx-ari
  ports:
  - port: 80
    targetPort: 80
